# LambdaInfraAutoTools

./: Makefile  Makefile.am  Makefile.in  README.md  SampleOutput.md  clean  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
examples/: Makefile  Makefile.am  Makefile.in
script/: Makefile.am
src/: Makefile  Makefile.am  Makefile.in  helloworld  helloworld.c  helloworld.hh  invokelambda.sh  setuplambda  setuplambda.sh  sign_invoke.py  test_invoke.py  updatelambda.sh
src/.deps/: helloworld.Po
src/lambda/: helloworld.cc
